[package]
name = "board"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
# embassy-net = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "unstable-traits", "nightly"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nightly"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
# embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "tick-hz-12_000_000"] }
# embassy-net-driver-channel = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
# embedded-hal-legacy = { package = "embedded-hal", version = "1.0.0-alpha.9" }
# num_enum = { version = "0.5.11", default-features = false }
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
# embedded-hal-async = "0.2.0-alpha.0"
critical-section = "1.1.1"
rp2040-hal = { version = "0.8.0", features = ["critical-section-impl", "rt", "rom-func-cache", "defmt"] }
rp2040-boot2 = "0.2.1"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
fugit = { version = "0.3.6", features = ["defmt"] }

[profile.release]
debug = true